--- a/mantis-tests/mantis-tests.csproj
+++ b/mantis-tests/mantis-tests.csproj
@@ -79,14 +79,18 @@
     <Compile Include="appmanager\FtpHelper.cs" />
     <Compile Include="appmanager\HelperBase.cs" />
     <Compile Include="appmanager\JamesHelper.cs" />
+    <Compile Include="appmanager\LoginHelper.cs" />
     <Compile Include="appmanager\MailHelper.cs" />
+    <Compile Include="appmanager\ManagementMenuHelper.cs" />
+    <Compile Include="appmanager\ProjectManagementHelper.cs" />
     <Compile Include="appmanager\RegistrationHelper.cs" />
     <Compile Include="model\AccountData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="appmanager\TelnetInterface.cs" />
     <Compile Include="tests\AccountCreationTests.cs" />
+    <Compile Include="tests\DeleteProject.cs" />
     <Compile Include="tests\TestBase.cs" />
-    <Compile Include="tests\UnitTest1.cs" />
+    <Compile Include="tests\CreateProject.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
