--- a/mantis-tests/mantis-tests.csproj
+++ b/mantis-tests/mantis-tests.csproj
@@ -85,6 +85,7 @@
     <Compile Include="appmanager\ProjectManagementHelper.cs" />
     <Compile Include="appmanager\RegistrationHelper.cs" />
     <Compile Include="model\AccountData.cs" />
+    <Compile Include="model\ProjectData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="appmanager\TelnetInterface.cs" />
     <Compile Include="tests\AccountCreationTests.cs" />
