--- a/mantis-tests/mantis-tests.csproj
+++ b/mantis-tests/mantis-tests.csproj
@@ -89,6 +89,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="appmanager\TelnetInterface.cs" />
     <Compile Include="tests\AccountCreationTests.cs" />
+    <Compile Include="tests\AuthTestBase.cs" />
     <Compile Include="tests\DeleteProject.cs" />
     <Compile Include="tests\TestBase.cs" />
     <Compile Include="tests\CreateProject.cs" />
